# demo_georges_image_classification

./: README.rst  demo_georges_image_classification.ipynb  pyproject.toml
.ipynb_checkpoints/: demo_georges_image_classification-checkpoint.ipynb
